.k8s/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  prometheus-operated
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/prometheus"
        backend:
          service:
            name:  prometheus-operated
            port:
              number: 9090
      - pathType: Prefix
        path: "/graphana"
        backend:
          service:
            name:  prometheus-grafana
            port:
              number: 80
